Layout fixes (#659)
* create basic navigation link styles

* create user menu component

* move footer into separate component

* small fix on user menu circle

* minor footer fixes

* removed extra footer

* fix layout issues

- add router active links
- fix dashboard page

* fix margin on login page

- remove build warning
- move h1 to global styles

* fix footer overlay bug

- add sticky footer
- add sticky background

* fix 404 xhr bundle requests

* update package-lock.json

* update deps

- package-lock.json
- package.json

* update dependencies for angular 6

* remove unused brace imports

* update rxjs from ng5 to ng6

* add tslint config

- add tslint rules

* fix lint issues

* add linear gradient for header

--- a/cmd/ui/assets/src/app/navigation/navigation.component.scss
+++ b/cmd/ui/assets/src/app/navigation/navigation.component.scss
@@ -1,15 +1,17 @@
-.nav-wrapper {
+:host {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 32px 0;
   width: 100%;
 
-  padding: 0 49px;
+  padding: 32px 49px;
 
   position: fixed;
   top: 0;
   left: 0;
+
+  background-image: linear-gradient(black, black, transparent);
+  z-index: 1000;
 
   .logo {
     min-width: 180px;
